// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc PayIn (PayInRequest) returns (PayInResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int64 age = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int64 age = 2;
}

message PayInRequest {
  string provider = 1;
  int64 amount = 2;
  string phone = 3;
  string appid = 4;
}

message PayInResponse {
  string sn = 1;
  string appid = 2;
  string provider = 3;
  int64 create_time = 4;
}
